--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".Register"
-            android:exported="false"></activity>
+            android:exported="false"/>
     </application>
 
 </manifest>
