updated science quiz and movies quiz activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         <activity
             android:name=".HistoryQuizActivity"
             android:exported="false" />
+        <activity
+            android:name=".ScienceQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MoviesQuizActivity"
+            android:exported="false" />
 
         <activity
             android:name=".SplashScreen"
