--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,7 +25,9 @@
         <activity
             android:name=".MoviesQuizActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".ResultActivity"
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true">
